--- a/build.gradle
+++ b/build.gradle
@@ -7,3 +7,25 @@ plugins {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+//判断当前运行环境是否是debug
+boolean isDebug() {
+    boolean ret = false
+    try {
+        Properties properties = new Properties()
+        File file = project.rootProject.file('local.properties')
+        if (!file.exists()) {
+            return false
+        }
+        properties.load(file.newDataInputStream())
+        String debugStr = properties.getProperty("debug")
+        if (debugStr != null && debugStr.length() > 0) {
+            ret = debugStr.toBoolean()
+        }
+    } catch (Throwable throwable) {
+        throwable.printStackTrace()
+        ret = false
+    }
+    project.logger.error("[${project.name}]Debug:${ret}")
+    return ret
+}
